--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -13,9 +13,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/title"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/imageView"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:paddingBottom="5dp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="85dp"
+        android:layout_weight="0.08">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ace"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:id="@+id/imageView" />
+            android:id="@+id/imageView3"
+            android:adjustViewBounds="true" />
     </RelativeLayout>
 
 </LinearLayout>
