--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -23,7 +23,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="85dp"
-        android:layout_weight="0.08">
+        android:layout_weight="0.12">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -33,6 +33,21 @@
             android:layout_centerHorizontal="true"
             android:id="@+id/imageView3"
             android:adjustViewBounds="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="37dp"
+        android:layout_weight="0.21">
+
+        <TextView
+            android:text="BET"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/bet_textView"
+            android:textSize="30sp" />
     </RelativeLayout>
 
 </LinearLayout>
