player's cards layout

--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -50,4 +50,19 @@
             android:textSize="30sp" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_weight="0.29">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ace"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/imageView4"
+            android:adjustViewBounds="true" />
+    </RelativeLayout>
+
 </LinearLayout>
