--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -7,7 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        android:layout_weight="0.07">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -159,7 +160,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="37dp"
-        android:layout_weight="0.21">
+        android:layout_weight="0.27">
 
         <TextView
             android:text="BET"
@@ -175,7 +176,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_weight="0.32">
+        android:layout_weight="0.27">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -258,19 +259,64 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:text="Click Coins to place Bet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_weight="0.03"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:elegantTextHeight="false"
+        android:gravity="center_vertical" />
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_weight="0.37">
+        android:layout_height="61dp">
 
-        <TextView
-            android:text="Bet Buttons and Coins"
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:srcCompat="@drawable/coin_5"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/textView3"
-            android:textSize="30sp" />
+            android:layout_toEndOf="@+id/imageButton4"
+            android:layout_marginStart="37dp"
+            android:id="@+id/imageButton5"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/coin_5"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/imageButton5"
+            android:layout_marginStart="37dp"
+            android:id="@+id/imageButton6"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/coin_5"
+            android:layout_marginStart="37dp"
+            android:id="@+id/imageButton8"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/imageButton6" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/coin_5"
+            android:id="@+id/imageButton4"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_marginStart="18dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 </LinearLayout>
