--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -268,7 +268,8 @@
         android:textSize="24sp"
         android:textAlignment="center"
         android:elegantTextHeight="false"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:textColor="#000000" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -277,7 +278,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/coin_5"
+            app:srcCompat="@drawable/coin_25"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/imageButton4"
             android:layout_marginStart="37dp"
@@ -288,7 +289,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/coin_5"
+            app:srcCompat="@drawable/coin_50"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/imageButton5"
             android:layout_marginStart="37dp"
@@ -299,7 +300,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/coin_5"
+            app:srcCompat="@drawable/coin_100"
             android:layout_marginStart="37dp"
             android:id="@+id/imageButton8"
             android:adjustViewBounds="true"
@@ -310,13 +311,14 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/coin_5"
+            app:srcCompat="@drawable/coin_5a"
             android:id="@+id/imageButton4"
             android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
             android:layout_marginStart="18dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:cropToPadding="false"
+            android:adjustViewBounds="true" />
     </RelativeLayout>
 
 </LinearLayout>
