--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -176,7 +176,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_weight="0.27">
+        android:layout_weight="0.30">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -319,6 +319,40 @@
             android:layout_alignParentStart="true"
             android:cropToPadding="false"
             android:adjustViewBounds="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:layout_weight="0.18">
+
+        <Button
+            android:text="Deal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="21dp"
+            android:id="@+id/deal_button" />
+
+        <Button
+            android:text="HIT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/hit_button"
+            android:layout_alignBaseline="@+id/stay_button"
+            android:layout_alignBottom="@+id/stay_button"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:text="STAY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/stay_button"
+            android:layout_alignBaseline="@+id/deal_button"
+            android:layout_alignBottom="@+id/deal_button"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="21dp" />
     </RelativeLayout>
 
 </LinearLayout>
