--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_weight="0.07">
+        android:layout_weight="0.11">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -19,7 +19,8 @@
             android:id="@+id/imageView"
             android:adjustViewBounds="true"
             android:cropToPadding="false"
-            android:paddingBottom="5dp" />
+            android:paddingBottom="5dp"
+            android:paddingTop="8dp" />
     </RelativeLayout>
 
     <RelativeLayout
