--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -20,6 +20,7 @@
             android:adjustViewBounds="true"
             android:cropToPadding="false"
             android:paddingBottom="5dp"
+            android:contentDescription="@string/app_name"
             android:paddingTop="8dp" />
     </RelativeLayout>
 
@@ -165,7 +166,7 @@
         android:layout_weight="0.27">
 
         <TextView
-            android:text="BET"
+            android:text="@string/bet_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -187,6 +188,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:id="@+id/player1_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true" />
 
         <ImageView
@@ -194,6 +196,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/spades_king"
             android:id="@+id/player2_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_marginStart="20dp"
             android:layout_alignParentBottom="true"
@@ -204,6 +207,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
             android:id="@+id/player3_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_marginStart="20dp"
             android:layout_alignParentTop="true"
@@ -215,6 +219,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
             android:id="@+id/player4_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_marginStart="19dp"
             android:layout_alignParentBottom="true"
@@ -226,6 +231,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/heart_ace"
             android:id="@+id/player5_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_marginStart="19dp"
             android:layout_alignParentTop="true"
@@ -237,6 +243,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
             android:id="@+id/player6_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_marginStart="19dp"
             android:layout_alignParentTop="true"
@@ -248,6 +255,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/heart_ace"
             android:id="@+id/player7_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_marginStart="19dp"
             android:layout_alignParentTop="true"
@@ -259,6 +267,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
             android:id="@+id/player8_imageView"
+            android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/player7_imageView"
@@ -268,7 +277,7 @@
     </RelativeLayout>
 
     <TextView
-        android:text="Click Coins to place Bet"
+        android:text="@string/click_coins_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
@@ -291,6 +300,7 @@
             android:layout_toEndOf="@+id/coin5_imageButton"
             android:layout_marginStart="37dp"
             android:id="@+id/coin25_imageButton"
+            android:contentDescription="@string/coins25"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter" />
 
@@ -302,6 +312,7 @@
             android:layout_toEndOf="@+id/coin25_imageButton"
             android:layout_marginStart="37dp"
             android:id="@+id/coin50_imageButton"
+            android:contentDescription="@string/coins50"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter" />
 
@@ -311,6 +322,7 @@
             app:srcCompat="@drawable/coin_100"
             android:layout_marginStart="37dp"
             android:id="@+id/coin100_imageButton"
+            android:contentDescription="@string/coins100"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             android:layout_alignParentTop="true"
@@ -321,6 +333,7 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/coin_5a"
             android:id="@+id/coin5_imageButton"
+            android:contentDescription="@string/coins5"
             android:scaleType="fitCenter"
             android:layout_marginStart="18dp"
             android:layout_alignParentTop="true"
@@ -335,32 +348,38 @@
         android:layout_weight="0.18">
 
         <Button
-            android:text="Deal"
+            android:text="@string/deal_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
             android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
+            android:layout_toStartOf="@+id/hit_button"
             android:id="@+id/deal_button" />
 
         <Button
-            android:text="HIT"
+            android:text="@string/hit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/hit_button"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
             android:layout_alignBaseline="@+id/stay_button"
             android:layout_alignBottom="@+id/stay_button"
             android:layout_centerHorizontal="true" />
 
         <Button
-            android:text="STAY"
+            android:text="@string/stay_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/stay_button"
             android:layout_alignBaseline="@+id/deal_button"
             android:layout_alignBottom="@+id/deal_button"
+            android:layout_toEndOf="@+id/hit_button"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="21dp" />
+            android:layout_marginEnd="21dp"
+            android:layout_marginStart="21dp" />
     </RelativeLayout>
 
 </LinearLayout>
