--- a/app/src/main/res/layout-land/table_design.xml
+++ b/app/src/main/res/layout-land/table_design.xml
@@ -27,6 +27,17 @@
         android:layout_height="60dp"
         android:layout_weight="0.11">
 
+        <TextView
+            android:text="@string/dealerTotal_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:textSize="25sp"
+            android:layout_marginStart="21dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/dealerTotal_textView" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,6 +49,18 @@
             android:paddingBottom="5dp"
             android:contentDescription="@string/app_name"
             android:paddingTop="8dp" />
+
+        <TextView
+            android:text="@string/playerTotal_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@id/imageView"
+            android:layout_marginStart="21dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="25sp"
+            android:id="@+id/playerTotal_textView" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -48,23 +71,24 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ace"
+            app:srcCompat="@drawable/back1"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="21dp"
             android:id="@+id/imageViewDealer01"
-            android:contentDescription="@string/ace_of_spades"
+            android:contentDescription="@string/face_down_playing_card"
             android:adjustViewBounds="true" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/back1"
+            app:srcCompat="@drawable/ace"
             android:id="@+id/imageViewDealer02"
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentBottom="true"
             android:layout_alignStart="@+id/imageViewDealer01"
-            android:contentDescription="@string/face_down_playing_card" />
+            android:contentDescription="@string/ace_of_spades" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -174,75 +198,17 @@
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
 
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:layout_weight="0.27">
-
-        <TextView
-            android:text="@string/dealerTotal_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="25sp"
-            android:id="@+id/dealerTotal_textView" />
-
-        <TextView
-            android:text="@string/bet_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bet_textView"
-            android:textSize="30sp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:text="@string/playerTotal_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="25sp"
-            android:layout_marginBottom="5dp"
-            android:id="@+id/playerTotal_textView" />
-
-        <TextView
-            android:text="@string/bank_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="25dp"
-            android:textSize="25sp"
-            android:id="@+id/bank_textView" />
-
-        <TextView
-            android:text="@string/bank_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView5"
-            android:textSize="25sp"
-            android:layout_below="@+id/bank_textView"
-            android:layout_alignStart="@+id/bank_textView" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_weight="0.30">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/spades_ace"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
             android:id="@+id/player1_imageView"
             android:contentDescription="@string/ace_of_spades"
+            android:layout_alignEnd="@+id/player2_imageView"
+            android:layout_marginEnd="15dp"
             android:adjustViewBounds="true" />
 
         <ImageView
@@ -252,9 +218,9 @@
             android:id="@+id/player2_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
-            android:layout_marginStart="20dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/player1_imageView" />
+            android:layout_alignEnd="@+id/player3_imageView"
+            android:layout_marginEnd="15dp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -263,9 +229,9 @@
             android:id="@+id/player3_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
-            android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/player2_imageView"
+            android:layout_alignEnd="@+id/player4_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -275,9 +241,9 @@
             android:id="@+id/player4_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
-            android:layout_marginStart="15dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/player3_imageView"
+            android:layout_alignEnd="@+id/player5_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -287,9 +253,9 @@
             android:id="@+id/player5_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
-            android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/player4_imageView"
+            android:layout_alignEnd="@+id/player6_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -299,9 +265,9 @@
             android:id="@+id/player6_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
-            android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/player5_imageView"
+            android:layout_alignEnd="@+id/player7_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -311,9 +277,9 @@
             android:id="@+id/player7_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
-            android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/player6_imageView"
+            android:layout_alignEnd="@+id/player8_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -324,8 +290,8 @@
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/player7_imageView"
-            android:layout_marginStart="15dp"
+            android:layout_alignEnd="@+id/player9_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -336,8 +302,8 @@
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/player8_imageView"
-            android:layout_marginStart="15dp"
+            android:layout_alignEnd="@+id/player10_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -348,8 +314,8 @@
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/player9_imageView"
-            android:layout_marginStart="15dp"
+            android:layout_alignEnd="@+id/player11_imageView"
+            android:layout_marginEnd="15dp"
             android:visibility="invisible"/>
 
         <ImageView
@@ -360,23 +326,35 @@
             android:contentDescription="@string/ace_of_spades"
             android:adjustViewBounds="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/player10_imageView"
-            android:layout_marginStart="15dp"
-            android:visibility="invisible"/>
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="21dp"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
-    <TextView
-        android:text="@string/click_coins_text"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_weight="0.03"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        android:elegantTextHeight="false"
-        android:gravity="center_vertical"
-        android:textColor="#000000" />
+        android:layout_height="37dp"
+        android:layout_weight="0.27">
+
+        <TextView
+            android:text="@string/click_coins_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:textSize="24sp"
+            android:textAlignment="center"
+            android:elegantTextHeight="false"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="21dp"
+            android:textColor="#000000" />
+
+    </RelativeLayout>
+
+
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -425,11 +403,39 @@
             android:id="@+id/coin5_imageButton"
             android:contentDescription="@string/coins5"
             android:scaleType="fitCenter"
-            android:layout_marginStart="18dp"
+            android:layout_marginStart="21dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:cropToPadding="false"
             android:adjustViewBounds="true" />
+
+        <TextView
+            android:text="@string/bet_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bet_textView"
+            android:textSize="30sp"
+            android:layout_toEndOf="@+id/coin100_imageButton"
+            android:layout_toStartOf="@+id/bank_textView"
+            android:layout_marginStart="37dp" />
+
+        <TextView
+            android:text="@string/bank_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="25dp"
+            android:textSize="25sp"
+            android:id="@+id/bank_textView" />
+
+        <TextView
+            android:text="@string/bank_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5"
+            android:textSize="25sp"
+            android:layout_below="@+id/bank_textView"
+            android:layout_alignStart="@+id/bank_textView" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -444,8 +450,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
             android:layout_marginStart="21dp"
-            android:layout_marginEnd="21dp"
-            android:layout_toStartOf="@+id/hit_button"
+            android:layout_marginEnd="30dp"
             android:id="@+id/deal_button" />
 
         <Button
@@ -453,11 +458,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/hit_button"
-            android:layout_marginStart="21dp"
-            android:layout_marginEnd="21dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             android:layout_alignBaseline="@+id/stay_button"
             android:layout_alignBottom="@+id/stay_button"
-            android:layout_centerHorizontal="true" />
+            android:layout_toEndOf="@+id/deal_button" />
 
         <Button
             android:text="@string/stay_text"
@@ -467,9 +472,8 @@
             android:layout_alignBaseline="@+id/deal_button"
             android:layout_alignBottom="@+id/deal_button"
             android:layout_toEndOf="@+id/hit_button"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="21dp"
-            android:layout_marginStart="21dp" />
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp" />
     </RelativeLayout>
 
 </LinearLayout>
