Restored Bet into a relative layout for landscape, added variables for saving the state of the MainActivity added methods to save and restore state created methods for newGame and restoreGame (code is not complete on these two methods) DID NOT resolve warnings

--- a/app/src/main/res/layout-land/table_design.xml
+++ b/app/src/main/res/layout-land/table_design.xml
@@ -409,15 +409,22 @@
             android:cropToPadding="false"
             android:adjustViewBounds="true" />
 
-        <TextView
-            android:text="@string/bet_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bet_textView"
-            android:textSize="30sp"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
             android:layout_toEndOf="@+id/coin100_imageButton"
-            android:layout_toStartOf="@+id/bank_textView"
-            android:layout_marginStart="37dp" />
+            android:layout_toStartOf="@+id/bank_textView">
+
+            <TextView
+                android:text="@string/bet_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/bet_textView"
+                android:textSize="30sp"
+
+                android:layout_marginStart="37dp" />
+
+        </RelativeLayout>
 
         <TextView
             android:text="@string/bank_text"
