--- a/app/src/main/res/layout-land/table_design.xml
+++ b/app/src/main/res/layout-land/table_design.xml
@@ -438,6 +438,20 @@
                 android:layout_alignStart="@+id/bet_textView"
                 android:textSize="25sp" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/message_imageView"
+                android:background="#087A61"
+                android:visibility="invisible"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/winner"
+                android:id="@+id/winMessage_imageView"
+                android:visibility="invisible"/>
+
         </RelativeLayout>
 
         <TextView
