--- a/app/src/main/res/layout-land/table_design.xml
+++ b/app/src/main/res/layout-land/table_design.xml
@@ -192,7 +192,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/imageViewDealer11"
+            android:id="@+id/dealer11_imageView"
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
@@ -426,17 +426,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/bet_textView"
-                android:textSize="30sp"
-
+                android:textSize="25sp"
+                android:layout_below="@+id/textView3"
                 android:layout_marginStart="37dp" />
 
             <TextView
+                android:text="@string/bet_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView3"
-                android:layout_below="@+id/bet_textView"
-                android:layout_alignStart="@+id/bet_textView"
-                android:textSize="25sp" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:textSize="25sp"
+                android:layout_marginStart="37dp" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -467,7 +469,7 @@
             android:text="@string/bank_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView5"
+            android:id="@+id/bankAmount_textView"
             android:textSize="25sp"
             android:layout_below="@+id/bank_textView"
             android:layout_alignStart="@+id/bank_textView" />
