--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -11,6 +11,70 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.antonioramos.blackjack.AboutActivity"
-    tools:showIn="@layout/activity_about">
+    tools:showIn="@layout/activity_about"
+    android:background="#087A61">
 
+    <TextView
+        android:text="Developed by"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"
+        android:id="@+id/textView4"
+        android:textSize="45sp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:text="And"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView6"
+        android:textSize="30sp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:text="Larson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView9"
+        android:textSize="25sp"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="38dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:text="Antonio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="74dp"
+        android:id="@+id/textView5"
+        android:textSize="25sp"
+        android:layout_below="@+id/textView4"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="28dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:text="Ramos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView8"
+        android:textSize="25sp"
+        android:layout_below="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:text="Gary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:textSize="25sp"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_alignEnd="@+id/textView4"
+        android:textColor="#ffffff" />
 </RelativeLayout>
