--- a/app/src/main/res/layout/table_design.xml
+++ b/app/src/main/res/layout/table_design.xml
@@ -258,17 +258,17 @@
             android:id="@+id/message_imageView"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:background="#087A61"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/winner"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
             android:id="@+id/winMessage_imageView"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            android:layout_above="@+id/playerTotal_textView"
+            android:layout_centerHorizontal="true"
+            android:layout_alignTop="@+id/bank_textView" />
 
     </RelativeLayout>
 
