--- a/app/src/main/res/layout-land/table_design.xml
+++ b/app/src/main/res/layout-land/table_design.xml
@@ -87,6 +87,7 @@
             android:id="@+id/firstCard_imageView"
             android:adjustViewBounds="true"
             android:layout_alignParentBottom="true"
+            android:contentDescription="@string/ace_of_hearts"
             android:layout_toStartOf="@+id/dealer6_imageView"
             android:visibility="invisible"/>
 
@@ -106,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ace"
-            android:id="@+id/delaer3_imageView"
+            android:id="@+id/dealer3_imageView"
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
@@ -122,7 +123,7 @@
             android:adjustViewBounds="true"
             android:layout_marginStart="15dp"
             android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/delaer3_imageView"
+            android:layout_alignStart="@+id/dealer3_imageView"
             android:contentDescription="@string/ace_of_spades"
             android:visibility="invisible" />
 
@@ -350,6 +351,7 @@
             app:srcCompat="@drawable/winner"
             android:id="@+id/winMessage_imageView"
             android:visibility="invisible"
+            android:contentDescription="@string/winner"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
