--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -12,10 +12,11 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:contentDescription="@string/app_name"
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="Play"
+        android:text="@string/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="148dp"
@@ -25,7 +26,7 @@
         android:textSize="30sp" />
 
     <Button
-        android:text="About"
+        android:text="@string/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="67dp"
